elastic fixes - rename the World